# ocamlExampleBot

./: Dockerfile  README.md  dune-project
.github/workflows/: docker-build-push.yml  docker-build.yml
src/: bot.ml  dune  llm_client.ml  telegram.ml  types.ml
